[Update] checkout@v2 clean option + path option

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -20,6 +20,8 @@ jobs:
         with:
           repository: jothepro/doxygen-awesome-css
           ref: v1.6.0
+          clean: false
+          path: "./"
 
       - name: Compute version
         id: version
