--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -20,8 +20,7 @@ jobs:
         with:
           repository: jothepro/doxygen-awesome-css
           ref: v1.6.0
-          clean: false
-          path: "./"
+          path: "doxygen-awesome-css"
 
       - name: Compute version
         id: version
