--- a/.github/workflows/conditional_job_test.yml
+++ b/.github/workflows/conditional_job_test.yml
@@ -13,9 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Print infos
+        run: echo github.ref is ${{github.ref}}, github.event.ref is ${{github.event.ref}}, github.event_name is ${{github.event_name}}
+      
       - name: Setup Binaries Archive
         if: github.ref == 'refs/heads/dev' && (startsWith(github.event.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch')   #Run only on dev branch, with workflow_dispatch or tag
-        run: echo github.ref is ${{github.ref}}, github.event.ref is ${{github.event.ref}}, 
+        run: echo Condition passed
 
 
         
