--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -3,7 +3,7 @@ name: Documentation
 on:
   push:
     tags:
-    - '*'
+    - 'v*.*.*'
   workflow_dispatch:
 
 jobs:
@@ -26,6 +26,17 @@ jobs:
         id: version
         run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       
+      - name: Update Version in Doxyfile
+        id: doxy_version
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: "PROJECT_NUMBER += v[0-9]+.[0-9]+.[0-9]+.?"
+          replace: "PROJECT_NUMBER = ${{ steps.version.outputs.VERSION }}"
+          include: "./docs/Doxyfile"
+
+      - name: Print doxy_version modified files count
+        run: echo Changed ${{ steps.doxy_version.outputs.modifiedFiles }} files.
+
       - name: "Run Doxygen"
         uses: mattnotmitt/doxygen-action@v1.1.0
         with:
