--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -25,10 +25,12 @@ jobs:
         with:
           find: "PROJECT_NUMBER += v[0-9]+.[0-9]+.[0-9]+.?"
           replace: "PROJECT_NUMBER = ${{ steps.version.outputs.VERSION }}"
-          include: "docs/**Doxyfile"
+          include: "docs/Doxyfile"
 
       - name: Print doxy_version modified files count
-        run: echo Changed ${{ steps.doxy_version.outputs.modifiedFiles }} files.
+        run: |
+          echo Changed ${{ steps.doxy_version.outputs.modifiedFiles }} files.
+          grep "PROJECT_NUMBER" docs/Doxyfile
 
       - name: "Run Doxygen"
         uses: mattnotmitt/doxygen-action@v1.1.0
